add wide logo versions, compress SVG and optimize PNG

--- a/brand/Makefile
+++ b/brand/Makefile
@@ -1,6 +1,9 @@
-all: logo-dark.svg logo-light.svg logo-dark.png logo-light.png
+all: logo-dark.svgz logo-light.svgz logo-dark.png logo-light.png logo-dark-wide.svgz logo-light-wide.svgz logo-dark-wide.png logo-light-wide.png
 
-logo-%.svg: logo-svg.pl
-	perl $< $* > $@
-logo-%.png: logo-%.svg
+logo-%-wide.svgz: logo-svg.pl
+	perl $< $* wide | gzip > $@
+logo-%.svgz: logo-svg.pl
+	perl $< $* square | gzip > $@
+logo-%.png: logo-%.svgz
 	convert $< $@
+	optipng $@
